Fixed all runtime errors until gameplay, updated some textures and added some deepslate texture variants of ores.